# arc-agi-3

./: .env.example  .gitignore  AGENT.md  DAGGER.md  EXPLAINER.md  GRADES.md  LICENSE-CONTENT.md  NOTES.md  PLAN.md  README.md  WORKLOG.md  pyproject.toml
gui/: palette.js  serve.py  viewer.html  viewer.js
src/arc_agi_3/: __init__.py  client.py  main.py  perception.py  policy_claude.py  session.py  structs.py  tools.py
src/arc_agi_3/agents/: base.py  llm_agent.py  random_agent.py  reasoner.py
src/arc_agi_3/arcg/: __init__.py  cli.py  gates.py  layer0_protocol.py  layer1_intent.py  layer2_state.py  layer3_memory.py  manifest.py  store.py  trace.py
src/arc_agi_3/dagger/: __init__.py  cli.py  dag.py
src/arc_agi_3/driver/: __init__.py  cli.py  loop.py
src/arc_agi_3/jotter/: __init__.py  cli.py  db.py  graph.py
src/arc_agi_3/simmer/: __init__.py  _ls20_reference.py  cli.py  engine.py
tests/: test_consistency.py  test_dagger.py  test_driver.py  test_gates.py  test_jotter.py  test_layering.py  test_llm_agent.py  test_loop.py  test_perception.py  test_reasoner.py  test_session.py  test_simmer.py  test_structs.py  test_trace.py
